# security-triage

./: .gitignore  AUTHORS.md  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  release.config.js
.github/: copilot-instructions.md
.github/agents/: implementation.agent.md
.github/skills/bugzilla/: SKILL.md
.github/workflows/: install.yml  lint.yml  publish.yml  release.yml  security-triage-apply.yml  security-triage.yml  tests.yml
docs/: _build_header.tex  github-actions-foundry-oidc.md  render_pdf.py  workflow-architecture.md
scripts/local/: populate_foundry_env.py  run_cleanup_dry_run.py  run_discovery_dry_run.py
src/security_triage/: __init__.py  actions.py  cleanup.py  cli.py  console.py  debug.py  discovery.py  env.py  go_vulndb.py  http_utils.py  io_utils.py  issue_updates.py  issues.py  models.py  oss_security.py  prompt_cache.py  reasoning.py  records.py  reporting.py  review.py  rules.py  rustsec.py  sbom.py  sources.py  time_utils.py
tests/: test_actions.py  test_cli.py  test_env.py  test_field_injection.py  test_github_actions_workflows.py  test_go_vulndb.py  test_http_security.py  test_issues_sbom.py  test_oss_security.py  test_prompt_hardening.py  test_review.py  test_rules.py  test_rustsec.py  test_sources_models.py  test_workflows.py  test_xml_security.py
tests/fixtures/: discovery_entries.json  github_issues.json  sbom.json
